--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "A Nodejs MVC framework",
   "main": "index.js",
   "scripts": {
-    "start" : "node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Osho Klinsmann",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "mongoose": "^4.7.8"
